@@ -1,3 +1,7 @@
+Fri Aug 28 10:41:38 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
+
+	* sysdeps/unix/sysv/linux/m68k/register-dump.h: New file.
+
 1998-08-27 19:42  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/Makefile (distribute): Add dl-origin.h.
